--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "public": "git add . && git commit -m change && git push -u origin main"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
+    "play-dl": "^1.9.6",
     "sodium": "^3.0.2",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.11.2"
