--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "play-dl": "^1.9.6",
     "sodium": "^3.0.2",
     "youtube-search-without-api-key": "^1.0.7",
-    "yt-search": "^2.10.3",
-    "ytdl-core": "^4.11.2"
+    "yt-search": "^2.10.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
